# wack-lab

./: README.md
Fam13a_analysis_pipelines/: README.md  environment.lock.yml  environment.yml  setup.cfg
Fam13a_analysis_pipelines/analysis/: hbec_analysis_guidance.ipynb  xenopus_analysis_guidance.ipynb
Fam13a_analysis_pipelines/analysis/hbec/: 1_segment_moving_regions.ipynb  2_segmentation_variance.ipynb  3_registration.ipynb  3a_registration_visualize.ipynb  3b_spatial_auto_correlation.ipynb  3c_visualise_spatial_auto_correlation.ipynb  4_summary_stats.ipynb  4a_combined_summary_stats.ipynb
Fam13a_analysis_pipelines/analysis/hbec/auxiliary_analysis/: 2_minimise_error_in_registration.ipynb
Fam13a_analysis_pipelines/analysis/preprocessing/: 1_replace_whitespace.ipynb  2_cleanup_hbec_stacks.ipynb  2_convert_xenopus_to_mp4.ipynb  3_check_file_naming_convention.ipynb
Fam13a_analysis_pipelines/analysis/xenopus/: 1a_gradient_segmentation.ipynb  1b_colour_segmentation.ipynb  4a_place_and_evaluate_markers.ipynb  4b_segment_and_track_points_with_kalman_alignment.ipynb  5_stats_test_of_results.ipynb
Fam13a_analysis_pipelines/src/fam13a/: __init__.py  consts.py  kalman.py  paths.py  register.py  spatial_autocorrelation.py  track.py  utils.py
Fam13a_analysis_pipelines/src/fam13a.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Fam13a_analysis_pipelines/src/fam13a/image/: __init__.py  background.py  consts.py  detect.py  patch.py  roi.py  segment.py  utils.py
