[metadata]
name = fam13a
version = 1.0.0
description = A short description of the project.
author = Capgemini Hybrid Intelligence
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
package_dir = =src
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools
install_requires =
    numpy

[options.packages.find]
where = src
